--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Підключення шрифту Ukraine */
-@import url('https://fonts.googleapis.com/css2?family=Ukraine&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 body {
-  font-family: 'Ukraine', sans-serif;
+  font-family: 'Mulish', sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.6;
