--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Підключення шрифту Ukraine */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 body {
@@ -24,12 +23,10 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Подсветка активного пункта меню */
 nav ul li a.active {
-  color: #e63946; /* акцентный цвет для активного пункта */
+  color: #e63946; 
 }
 
-/* Можно добавить небольшой эффект при наведении */
 nav ul li a:hover {
   color: #e76f51;
 }
@@ -65,6 +62,7 @@ section {
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.05);
 }
+
 /* Форма реєстрації */
 form {
   max-width: 500px;
@@ -155,5 +153,3 @@ footer {
   margin-top: 30px;
   border-top: 3px solid #457b9d;
 }
-
-
